--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>xiangfeng-notes</title>
+    <title>BeiXi-notes</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta name="description" content="Description">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1.0, maximum-scale=2.0, minimum-scale=1.0">
@@ -413,8 +413,8 @@
     <script>
     window.$docsify = {
         maxAge: 100,
-        name: 'xiangfeng-notes',
-        repo: 'https://github.com/xjh199923/xiangfeng-notes',
+        name: 'BeiXi-notes',
+        repo: 'https://github.com/xjh199923/BeiXi-notes',
         search: {
             paths: 'auto',
             placeholder: '🔍 点击搜索！',
